--- a/botanica/style.css
+++ b/botanica/style.css
@@ -46,7 +46,7 @@ button {
   font-weight: 500;
   border: none;
   border-radius: 12px;
-  margin: 10px 15px;
+  margin: 10px 5px;
   box-shadow: 0 6px 12px rgba(0,0,0,0.15);
   transition: all 0.3s ease;
 }
@@ -84,17 +84,15 @@ button:active {
   display: flex;
   justify-content: flex-start;
   gap: 8px;
-  margin: 5px 3px 4px 3px;
+  margin: 20px 3px 4px 3px;
 }
 
 .bgrd-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
+  margin: 0;
   background-color: #44475a;
   padding: 5px;
   border-radius: 6px;
-  margin-top: 10px;
   transition: transform 0.2s ease;
 }
 
@@ -126,6 +124,13 @@ button:active {
     width: 210px;
 }
 
+.controls {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 80px;
+}
+
 #preview {
   max-width: 90%;
   max-height: 90%;
@@ -134,6 +139,9 @@ button:active {
 }
 
 #social-link img {
+  display: flex;
+  align-items: center;
+  justify-self: center;
   width: 32px;
   height: 32px;
   margin: 2px 2px 2px 2px;
