--- a/botanica/style.css
+++ b/botanica/style.css
@@ -41,14 +41,15 @@ button {
   background: #ffaafc;
   color: #000000;
   cursor: pointer;
-  padding: 12px 28px;
+  padding: 6px 20px;
   font-size: 14px;
   font-weight: 500;
   border: none;
   border-radius: 12px;
-  margin: 10px 5px;
+  margin: 5px;
   box-shadow: 0 6px 12px rgba(0,0,0,0.15);
   transition: all 0.3s ease;
+  width: 100%;
 }
 
 button:hover {
@@ -96,6 +97,49 @@ button:active {
   transition: transform 0.2s ease;
 }
 
+.copy-or-down{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 6px;
+  color: #ffffff;
+  width: 100%;
+  margin-right: 10px;
+   margin-left: 5px;
+}
+
+#download-button, #copy-button {
+  margin: 0;
+  padding: 8px 20px;
+ 
+  font-size: 12px;
+  width: 100%;
+}
+
+#copy-button {
+  background: #aaaaaa;
+  color: #000000;
+}
+
+#slider {
+  width: 90%;
+  margin-top: 20px;
+  accent-color: #ffaafc;
+}
+
+
+
+.range{
+  display: flex;
+  justify-content: space-between;
+  accent-color: #ffaafc;
+  width: 100%;
+  align-items: center;
+  margin-top: 20px;
+  font-size: 0.85rem;
+}
+
 .bgrd-btn:hover {
   transform: scale(1.08);
 }
@@ -129,6 +173,20 @@ button:active {
   justify-content: center;
   width: 100%;
   height: 80px;
+  background: rgba(255, 170, 252, 0.1);
+  border: 2px solid rgba(255, 170, 252, 0.3);
+  border-radius: 6px;
+  margin-top: 20px;
+}
+
+.quality-screenshot {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  color: #f8f8f2;
+  font-size: 0.9rem;
+  width: 100%;
 }
 
 #preview {
